 * If user in the project is disabled, remove them from the WiMAX group (#1124)
 * Update to new WiMAX method signatures, error messages (#1093)
 * View RSpecs using Jacks viewer on `Manage RSpecs` page. (#1127)
 * Display project URN on project page (#1142)
 * Ensure all `img` tags are properly closed. (#1145)
 * Update to new WiMAX method signatures, error messages (#1093)

== 2.18.1 ==
 * When displaying a stitching RSpec, do not filter results by AM. (#1130)
 * Show the text of any Omni or Stitching error coming
   in stderr to the user to explain any failure. (#1131)

== 2.18 ==
 * Add Resources: changing RSpec resets AM (#1108)
 * Add Stitching Allocate Resources Interface (#581)
   * Use stitcher to do all Omni calls, including adding a new
   `stitcher_php` to invoke it.
   * Refactor `slice-add-resources` to use a table for display
   * Disable `Reserve Resources` until you pick an RSpec
   * Include `Manage RSpecs` as a tab on the `Add Resources`
     page. (#412)
   * Add searching and sorting to `Manage RSpecs` (#228, #467)
 * Warn that the Raw status link refetches status. (#764)
 * Mention 'manifest' and 'xml' on Details page. (#475)
 * Cleanly redirect to the referer on the KM activate page,
   avoiding attempting to construct a relative URL from an
   absolute URL. Additionally, check the path when constructing
   a relative URL to make sure we construct something 
   relative. (#1110)
 * Explain what RSpec name and description are. (#420)
 * Link to the GENI Glossary to explain project and slice roles. (#558)
 * Change subject on project join request email (fix grammar). (#1083)
 * Warn on missing slice name to createslice. (#1028)
 * Allow specifying the "site" for GENI Desktop (stable vs ....). (#1113)
 * Add various DB constraints (not null, unique, foreign key, primary key)
   so that the database enforces known relationships. (#943)
   Additionally, index sa_slice_member(slice_id),
   pa_project_member(project_id), pa_project_member(member_id)