@@ -41,6 +41,8 @@
  * Display project URN on project page (#1142)
  * Ensure all `img` tags are properly closed. (#1145)
  * Update to new WiMAX method signatures, error messages (#1093)
+ * Disallow WiMAX group lead from deleting their WiMAX
+   account while they still lead some other WiMAX group. (#1151)
 
 == 2.18.1 ==
  * When displaying a stitching RSpec, do not filter results by AM. (#1130)
